2005-10-29  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix handling of multiple albums (David Mandelberg, closes #318044)

2005-10-11  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Protect against FileChooserButton returning a NULL path (#317999)
	(from HEAD).

2005-10-07  Yair Hershkovitz  <yairhr@gmail.com>

	* configure.in: Added "he" to ALL_LINGUAS

2005-10-07  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Protect against invalid iterators (backport from HEAD).

2005-10-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sound-juicer.h:
	* src/sj-main.c:
	Add --enable-debug and start using it (backport from HEAD).

2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>

	* configure.in: Added "bn" (Bengali) to ALL_LINGUAS.

2005-09-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12.2.

2005-09-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix the totally broken --device

2005-09-18  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12.1.

2005-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Translate the Extract stock item.

2005-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add a --device option for gnome-volume-manager.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add a cast.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Set the cdparanoia read speed preference on every rip, just to
	make sure.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Fix typo.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* README:
	Updated.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	* doap.rdf.in:
	Generate a DOAP file at dist-time and ship it.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12!

2005-09-04  Roozbeh Pournader  <roozbeh@farsiweb.info>
